# nimble-app

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  Readme.md
Nimble.App/: Nimble.App.csproj
Nimble.App.Example/: Nimble.App.Example.csproj  TestWidget.cs
Nimble.App.Example/Properties/: AssemblyInfo.cs
Nimble.App/Internal/: EntryPoint.cs  Loader.cs  WidgetLoader.cs
Nimble.App/Math/: Bounds.cs  Vector2.cs  Vector2Int.cs  Vector3.cs  Vector3Int.cs  Vector4.cs  Vector4Int.cs
Nimble.App/Properties/: AssemblyInfo.cs
Nimble.App/Serialization/: ContentNode.cs
Nimble.App/Widgets/: Button.cs  Label.cs  Rect.cs  Widget.cs  WidgetAnchor.cs  WidgetDirection.cs  WidgetGraphics.cs  WidgetJustify.cs  WidgetLayout.cs  WidgetModel.cs  WidgetTagAttribute.cs
content/: english.ini  example.xml  messagebox.xml  style.ini
example/: CMakeLists.txt  main.cpp
include/nimble/: app.h  bounds.h  common.h  content.h  contentmanager.h  contentnode.h  ini.h  layoutloader.h  layoutnode.h  localization.h  utils.h  widget.h  widgetevent.h  widgetselector.h
include/nimble/content/: font.h
include/nimble/content/nodes/: layoutnode.h  stylenode.h
include/nimble/managed/: managedclass.h  managedcode.h
include/nimble/managed/internal/: contentnode.h  widget.h
include/nimble/utils/: bounds.h  ini.h  utils.h
include/nimble/widgets/: button.h  label.h  managed.h  page.h  rect.h  text.h
src/: layout.cpp  main.cpp  nanovg.cpp  prototype.cpp  scratch2.cpp
src/nimble/: app.cpp  bounds.cpp  content.cpp  contentmanager.cpp  contentnode.cpp  ini.cpp  layoutloader.cpp  layoutnode.cpp  localization.cpp  utils.cpp  widget.cpp  widgetevent.cpp  widgetselector.cpp
src/nimble/content/: font.cpp
src/nimble/content/nodes/: layoutnode.cpp  stylenode.cpp
src/nimble/managed/: managedclass.cpp  managedcode.cpp
src/nimble/managed/internal/: contentnode.cpp  widget.cpp
src/nimble/utils/: bounds.cpp  ini.cpp  localization.cpp  utils.cpp
src/nimble/widgets/: button.cpp  label.cpp  managed.cpp  page.cpp  rect.cpp  text.cpp
